--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -27,19 +27,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:weightSum="2"
+
             android:orientation="horizontal"
-            android:layout_weight="1.9">
+            android:layout_weight="2.6">
             <ImageView
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:padding="15dp"
-                android:id="@+id/icon_view"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
+                android:padding="5dp"
 
-                android:layout_weight="2"/>
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:id="@+id/icon_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
 
 
 
@@ -50,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.2"></LinearLayout>
+            android:layout_weight=".6"></LinearLayout>
 
         <LinearLayout
             android:layout_margin="5dp"
@@ -94,6 +95,7 @@
                     android:layout_weight="2">
                     <EditText
                         android:id="@+id/login_password"
+                        android:inputType="textPassword"
                         android:hint="@string/password"
                         android:gravity="center"
                         android:background="#ffffff"
@@ -128,6 +130,11 @@
 
                 android:layout_weight="2"
                 android:id="@+id/login_submit" />
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
 
 
 
@@ -148,7 +155,7 @@
                 android:scaleType="fitXY"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:layout_weight=".3"/>
+                android:layout_weight=".4"/>
 
             <Button
                 android:layout_marginLeft="3dp"
@@ -160,7 +167,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
 
-                android:layout_weight="1.7"
+                android:layout_weight="1.6"
                 android:id="@+id/fb_button" />
 
 
