--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,171 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-
     android:layout_height="125dp"
-  >
+
+    android:orientation="vertical">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="120dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:weightSum="5"
-
-        android:layout_marginBottom="1dp"
-        android:orientation="horizontal">
-
-
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="0dp"
-        android:src="@drawable/profile"
-        android:tint="#4b3b3a"
-        android:layout_height="match_parent"
-        android:layout_weight="1.5"/>
-
-    <LinearLayout
-        android:paddingLeft="5dp"
-        android:paddingRight="2dp"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="5.5"
-        android:layout_weight="3.5">
-
-        <TextView
-            android:id="@+id/user_name"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="User Name"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
-            android:gravity="center_vertical"
-            android:layout_weight="1.4"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".1"
-            android:background="#cfcaca"></View>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="User Name"
-            android:gravity="center_vertical"
-            android:weightSum="2"
+            android:layout_height="120dp"
+            android:layout_marginBottom="1dp"
+
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:weightSum="5">
 
-            <TextView
-                android:id="@+id/age"
-            android:layout_width="0dp"
-                android:textSize="12sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="24 year 5.11"/>
-            <TextView
-                android:id="@+id/profession"
+
+            <ImageView
+                android:id="@+id/profile_image"
                 android:layout_width="0dp"
-                android:textSize="12sp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Doctor"/>
+                android:layout_weight="1.5"
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/profile"
+                android:tint="#4b3b3a" />
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3.5"
+                android:orientation="vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="2dp"
+                android:weightSum="5.5">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1.4"
+                    android:gravity="center_vertical"
+                    android:text="User Name"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight=".1"
+                    android:background="#cfcaca"></View>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:text="User Name"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/age"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="24 year 5.11"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/profession"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Doctor"
+                        android:textSize="12sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:text="User Name"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/body_color"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Golden White"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/marital_status"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Unmarrid"
+                        android:textSize="12sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:text="User Name"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/weight_status"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Slim"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/religion"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Muslim"
+                        android:textSize="12sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:text="User Name"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/loacation"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Dhaka" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="●●"
+
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="User Name"
-            android:gravity="center_vertical"
-            android:weightSum="2"
-            android:orientation="horizontal"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/body_color"
-                android:layout_width="0dp"
-                android:textSize="12sp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Golden White"/>
-            <TextView
-               android:id="@+id/marital_status"
-                android:layout_width="0dp"
-                android:textSize="12sp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Unmarrid"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="User Name"
-            android:gravity="center_vertical"
-            android:weightSum="2"
-            android:orientation="horizontal"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/weight_status"
-                android:layout_width="0dp"
-                android:textSize="12sp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Slim"/>
-            <TextView
-                android:id="@+id/religion"
-                android:layout_width="0dp"
-                android:textSize="12sp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Muslim"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="User Name"
-            android:gravity="center_vertical"
-            android:weightSum="2"
-            android:orientation="horizontal"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Dhaka"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="15sp"
-                android:gravity="center"
-
-                android:textStyle="bold"
-                android:text="●●● "/>
-
-
-        </LinearLayout>
-
-
-
-
-    </LinearLayout>
-
-    </LinearLayout>
 
     </android.support.v7.widget.CardView>
+
     <LinearLayout
 
         android:layout_width="match_parent"
