--- a/app/src/main/res/layout/match.xml
+++ b/app/src/main/res/layout/match.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
 
+    <RelativeLayout
+        android:id="@+id/RelativeLayoutLeftButton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:tint="@color/cardview_dark_background"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            android:src="@drawable/b" />
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
+
 
         android:id="@+id/match_list"
         android:layout_width="match_parent"
